# fusion_field_project

./: .gitignore  pyproject.toml  requirements.txt
scripts/: demo_sweep.py  run_streamlit.sh
src/fusion_field_project/: __init__.py  main.py
src/fusion_field_project/coils/: __init__.py  geometry.py  presets.py
src/fusion_field_project/simulation/: biot_savart.py  grid.py  metrics.py  plasma_model.py
src/fusion_field_project/ui/: app.py
tests/: test_imports.py  test_metrics.py  test_presets.py
